Move project-level scripts to scripts/ directory and update all references
- Move generate_api_docs.py, performance_polish.py, security_audit.py, ux_improvements.py to scripts/
- Update Path(__file__).parent to Path(__file__).parent.parent in moved scripts
- Update CI workflow reference: test_cross_platform.py → tests/test_cross_platform.py
- Update documentation references in CHANGELOG.md and AGENTS.md
- All scripts tested and working correctly from new location

This completes project organization with proper separation:
- Root directory: clean of Python files
- tests/: all test files including test_final_qa.py
- scripts/: all development utilities and project tools

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -71,7 +71,7 @@ jobs:
         
       - name: Run cross-platform tests
         if: matrix.os == 'ubuntu-latest' && matrix.python-version == '3.12'
-        run: uv run python test_cross_platform.py
+        run: uv run python tests/test_cross_platform.py
 
   build:
     name: Build Package
