clean: remove unnecessary files and update test fixtures
- Remove QA_REPORT.md (temporary test output, should not be committed)
- Remove tests/fixtures/test.svg (duplicate of existing test_design.svg)
- Update .gitignore to exclude QA_REPORT.md generation
- Update test_axidraw.py to use proper test_design.svg fixture

This ensures only necessary test artifacts are tracked while temporary
test outputs are properly ignored.

--- a/.gitignore
+++ b/.gitignore
@@ -146,6 +146,7 @@ coverage.xml
 !config/config.yaml
 !config/vpype-presets.yaml
 !tests/fixtures/test_design.svg
+QA_REPORT.md
 !packaging/
 packaging/*.tar.*
 !alembic.ini
