chore: Add PRD to gitignore for upcoming stint
- Keep PLLOTTY_MONITORING_PRD.md local for upcoming work
- Prevent accidental commits of working documents
- Maintain clean repository while preserving working files

--- a/.gitignore
+++ b/.gitignore
@@ -159,6 +159,9 @@ QA_REPORT.md
 !packaging/
 packaging/*.tar.*
 
+# Working documents (keep local, don't commit)
+PLLOTTY_MONITORING_PRD.md
+
 # =============================================================================
 # Legacy/Unused (can be removed in future cleanup)
 # =============================================================================
