feat: Implement WebSocket monitoring system v1.1.0
- Add real-time WebSocket server with FastAPI and authentication
- Implement job state change broadcasting via HookExecutor integration
- Create comprehensive message schemas for WebSocket communication
- Add WebSocket tests to plotty check self (4 new tests)
- Rename job_commands.py to commands.py for consistency
- Update daemon.py with WebSocket manager injection
- Add monitor.py for WebSocket client functionality
- Enhanced self-test system with WebSocket validation
- Update configuration schema with WebSocket settings
- Complete package reorganization: websocket/ package
- Add systemd and quadlet service configurations
- Bump version to 1.1.0 for new monitoring features

--- a/src/plotty/config/config.yaml
+++ b/src/plotty/config/config.yaml
@@ -19,6 +19,12 @@ logging:
   level: "INFO"
   # file: (default: XDG data directory logs/plotty.log)
 
+websocket:
+  enabled: true
+  host: "localhost"
+  port: 8765
+  authenticate: false
+
 hooks:
   NEW:
     - command: "notify-send 'ploTTY: Job {job_id} created - starting analysis'"
