--- a/packaging/systemd/plotty.service
+++ b/packaging/systemd/plotty.service
@@ -6,7 +6,7 @@ After=network.target
 Type=simple
 Environment=PYTHONUNBUFFERED=1
 Environment=PLOTTY_CONFIG=%h/.config/plotty/config.yaml
-ExecStart=/usr/bin/plottyd
+ExecStart=/usr/bin/plotty daemon --foreground
 Restart=on-failure
 
 [Install]
