--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,9 @@ dependencies = [
     "click>=8.0.0",
     "platformdirs>=4.0.0",
     "defusedxml>=0.7.1",
+    "fastapi>=0.104.0",
+    "websockets>=12.0",
+    "uvicorn[standard]>=0.24.0",
 ]
 
 [project.optional-dependencies]
