--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,6 +2,7 @@ include LICENSE
 include README.md
 include CHANGELOG.md
 include RELEASE_NOTES.md
+include uv.lock
 include *.yaml
 include *.yml
 recursive-include config *.yaml
