--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ build-backend = "setuptools.build_meta"
 where = ["src"]
 
 [tool.setuptools.package-data]
-vfab = ["config/*.yaml"]
+vfab = ["config/*.yaml", "uv.lock"]
 
 [project]
 name = "vfab"
